--- a/index.html
+++ b/index.html
@@ -2,31 +2,123 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>CV Kevin Jesus CG</title>
-    <meta name="description" content="Estudiante facultad de ingeniería UAEMex">
-    <link href="css/style.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>Kevin Jesus CG CV</title>
+  <meta name="description" content="Estudiante facultad de ingeniería UAEMex">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body>
-    <!--Encabezado-->
-    <header>
-        <p>Kevin Jesús Coyote Gil</p>
-        <p>FullStack Web Developer</p>
+<body style="font-family: Arial, Helvetica, sans-serif; margin: 0;">
+  <!--Encabezado-->
+  <header style="background-color: darkviolet; text-align: center; padding: 16px;">
+    <!--En un solo bloque-->
+    <h1 style="display: inline-block; width: 400px; color: white; font-weight: 700;">CV de Kevin Jesús</h1>
+    <p style="display: inline-block; width: 400px; color: white; font-weight: 200;">FullStack Web Developer</p>
 
-    </header>
+  </header>
 
-    <!---->
-    <div class="introduccion">
-        Estudiante de Ingeniería en computación (2018 - 2024)
-        Adquirí habilidades prácticas en la implementación de un Sistema de Ventas "Leo," un proyecto que implicó la
-        implementación de Java y la
-        integración con una base de datos SQLite.
-    </div>
+  <!---->
+  <div style="background-color: cornflowerblue; text-align: center; padding: 10px;">
+    Estudiante de Ingeniería en computación (2018 - 2024)
+    Adquirí habilidades prácticas en la implementación de un Sistema de Ventas "Leo," un proyecto que implicó la
+    implementación de Java y la
+    integración con una base de datos SQLite.
+  </div>
 
-    <div class="logo">
-        <img src="img/logo-mio-black.png" alt="Logo Kevscl" width="150" height="150">
-    </div>
+  <section>
+    <div style="width: 960px; margin-right: auto; margin-left: auto;">
+      <div style="margin-top: 16px;">
+
+        <!-- Educación -->
+        <div style="display: inline-block; width: 68%; vertical-align: top;">
+          <h3 style="font-size: 36px; font-weight: 700;">Educación</h3>
+          <div>
+            <dl>
+              <dt style="font-size: 22px; text-transform: uppercase; margin-bottom: 12px; margin-top: 36px;">Ingeniería
+                en
+                computación</dt>
+              <dd>2018-2024. Facultad de ingeniería - UAEMex</dd>
+              <dt style="font-size: 22px; text-transform: uppercase; margin-bottom: 12px; margin-top: 36px;">Pasante de
+                técnico en contabilidad</dt>
+              <dd>2015-2018. CBT No. 5 TOLUCA "CP Alberto Mena Flores"</dd>
+            </dl>
+          </div>
+        </div>
+
+        <!-- Logo -->
+        <div style="display: inline-block; width: 30%;">
+          <img src="img/logo-mio-black.png" alt="Logo de Kevscl" width="200">
+        </div>
+      </div>
+      <!-- Experiencia -->
+      <div style="margin-top: 70px;">
+        <h3 style="font-size: 36px; font-weight: 700;">Experiencia</h3>
+        <div>
+          <dl>
+            <dt style="font-size: 22px; text-transform: uppercase; margin-bottom: 12px; margin-top: 36px;">Sistema de
+              Ventas
+              "Leo"</dt>
+            <dd>Implementación de una base de datos en SQLite</dd>
+            <dd>Desarrollo de un Sistema de Ventas utilizando Java y SQLite.</dd>
+            <dd>Implementación de funciones para gestión de inventario y generación de facturas.</dd>
+            <dd>Diseño e implementación de la interfaz gráfica de usuario (GUI).</dd>
+            <dd>Integración con la base de datos SQLite para almacenamiento y recuperación de datos.</dd>
+          </dl>
+        </div>
+      </div>
+
+      <!-- ... Otras secciones del currículum ... -->
+
+      <div style="margin-top: 70px;">
+        <h3 style="font-size: 36px; font-weight: 700;">Cursos y Certificados</h3>
+        <ul style="margin-top: 50; padding: 0px;">
+          <a href="https://drive.google.com/file/d/1OrDjGlPqGBEKlg2Ce0gNpq8zuAy3L9h2/view?usp=sharing" target="_blank">
+            <li style="margin-top: 16px;">Especialidad de aplicaciones con Flutter - códigofacilito - 2023</li>
+          </a>
+          <a href="https://drive.google.com/file/d/1fm2Q6fuI-X1S7rdJNL5pscM0cosGSpIZ/view?usp=sharing" target="_blank">
+            <li style="margin-top: 16px;">Curso profesional de JavaScript - códigofacilito - 2023</li>
+          </a>
+          <a href="https://drive.google.com/file/d/11gqKZ58LI8FR8fAUKculf4R717m79EiI/view?usp=sharing" target="_blank">
+            <li style="margin-top: 16px;">Curso profesional de JAVA - códigofacilito - 2023</li>
+          </a>
+          <!-- Agrega aquí otros cursos o certificados relevantes que hayas completado -->
+        </ul>
+      </div>
+
+      <div style="margin-top: 70px;">
+        <h3 style="font-size: 36px; font-weight: 700;">Otros</h3>
+        <ul style="margin-top: 50; padding: 0px;">
+          <!-- Ejemplo de proyectos personales -->
+          <li style="margin-top: 16px;">Desarrollo de un Sistema de Ventas usando la libreria eel de Python</li>
+
+          <!-- Ejemplo de participación en eventos y competencias -->
+          <li style="margin-top: 16px;">Desafío de Aprendizaje Automático - [Microsoft] - 2023</li>
+
+          <!-- Ejemplo de voluntariado o actividades extracurriculares -->
+
+          <!-- Ejemplo de habilidades adicionales -->
+
+        </ul>
+      </div>
+
+      <!-- Redes sociales-->
+      <div style="margin-top: 70px;">
+        <h3 style="font-size: 36px; font-weight: 700;">Redes Sociales</h3>
+        <div style="text-align: center; margin-top: 16px;">
+          <a href="https://github.com/KevinGil12C" target="_blank" class="social-icon" style="margin-right: 10px;">
+            <img src="img/logotipo-de-github.png" alt="KevinGil12C" width="50">
+          </a>
+          <a href="https://www.facebook.com/kevinHeath120" target="_blank" class="social-icon"
+            style="margin-right: 10px;">
+            <img src="img/facebook.png" alt="Kevin kevinHeath120" width="50">
+          </a>
+          <a href="mailto:kebo.jcg77@gmail.com" target="_blank" class="social-icon" style="margin-right: 10px;">
+            <img src="img/gmail.png" alt="" width="50">
+          </a>
+        </div>
+      </div>
+
+  </section>
 </body>
 
 </html>
