--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
   <!---->
   <div style="background-color: cornflowerblue; text-align: center; padding: 10px;">
     Estudiante de Ingeniería en computación (2018 - 2024)
-    Adquirí habilidades prácticas en la implementación de un Sistema de Ventas "Leo," un proyecto que implicó la
-    implementación de Java y la
-    integración con una base de datos SQLite.
   </div>
 
   <section>
@@ -62,6 +59,7 @@
             <dd>Desarrollo de un Sistema de Ventas utilizando Java y SQLite.</dd>
             <dd>Implementación de funciones para gestión de inventario y generación de facturas.</dd>
             <dd>Diseño e implementación de la interfaz gráfica de usuario (GUI).</dd>
+            <dd>Implementación de reportes en PDF y Excel</dd>
             <dd>Integración con la base de datos SQLite para almacenamiento y recuperación de datos.</dd>
           </dl>
         </div>
