Commit de proyecto

--- a/SiVenLeo/proyectoSivenLeo.html
+++ b/SiVenLeo/proyectoSivenLeo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../fontawesome/css/all.css">
-    <title>Mi top Edutuber</title>
+    <title>SiVenLeo</title>
     <link href="../css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/animate.css">
@@ -25,13 +25,12 @@
                 </h2>
             </header>
             <section>
-                <img src="" alt="">
                 <div class="text">
                     <img src="../imageSivenlo/06.png" alt="Programación ATS"
                         style="display: inline-block; width: 68%; vertical-align: top;">
                     <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/2ZXiuh0rg3M" frameborder="0"
                         allowfullscreen></iframe>-->
-                    <span style="display: inline-block; width: 30%;" class="descripcion">
+                    <span style="display: inline-block; width: 28%;" class="descripcion">
                         <h2 class="title-desc">Descripción</h2>
                         Desarrollo de un Sistema Integral de Ventas para el Control de Ventas, Inventario y Compras
 
