Commit MS skill

--- a/index.html
+++ b/index.html
@@ -67,20 +67,25 @@
             <div>
               <dl>
                 <div class="sivenleo">
-                   <!--Agregamos un enlace a las fotos del proyecto-->
-                  <dt>Sistema de Ventas Leo <a href="SiVenLeo/proyectoSivenLeo.html"><button type="button" class="btn btn-primary">
-                    Ver más sobre el proyecto.
-                </button></a></dt>
+                  <!--Agregamos un enlace a las fotos del proyecto-->
+                  <dt>Sistema de Ventas Leo <a href="SiVenLeo/proyectoSivenLeo.html"><button type="button"
+                        class="btn btn-primary">
+                        Ver más sobre el proyecto.
+                      </button></a></dt>
                   <dd><i class="fa-solid fa-heart"></i> Implementación de una base de datos en SQLite</dd>
-                  <dd><i class="fa-solid fa-heart"></i> Desarrollo de un Sistema de Ventas utilizando Java y SQLite.</dd>
-                  <dd><i class="fa-solid fa-heart"></i> Implementación de funciones para gestión de inventario y generación de facturas.</dd>
-                  <dd><i class="fa-solid fa-heart"></i> Diseño e implementación de la interfaz gráfica de usuario (GUI).</dd>
+                  <dd><i class="fa-solid fa-heart"></i> Desarrollo de un Sistema de Ventas utilizando Java y SQLite.
+                  </dd>
+                  <dd><i class="fa-solid fa-heart"></i> Implementación de funciones para gestión de inventario y
+                    generación de facturas.</dd>
+                  <dd><i class="fa-solid fa-heart"></i> Diseño e implementación de la interfaz gráfica de usuario (GUI).
+                  </dd>
                   <dd><i class="fa-solid fa-heart"></i> Implementación de reportes en PDF y Excel</dd>
-                  <dd><i class="fa-solid fa-heart"></i> Integración con la base de datos SQLite para almacenamiento y recuperación de datos.</dd>
+                  <dd><i class="fa-solid fa-heart"></i> Integración con la base de datos SQLite para almacenamiento y
+                    recuperación de datos.</dd>
                 </div>
               </dl>
             </div>
-           
+
 
           </div>
 
@@ -90,8 +95,8 @@
             <div>
               <table class="table">
                 <thead>
-                    <th>Lenguajes de programación.</th>
-                    <th>Bases de datos.</th>
+                  <th>Lenguajes de programación.</th>
+                  <th>Bases de datos.</th>
                 </thead>
 
                 <tbody>
@@ -112,61 +117,68 @@
                     <td><i class="fa-solid fa-terminal"></i> PostgreSQL</td>
                   </tr>
                 </tbody>
-              </table> 
+              </table>
 
-          <!-- ... Otras secciones del currículum ... -->
+              <!-- ... Otras secciones del currículum ... -->
 
-          <div style="margin-top: 70px;">
-            <h3 style="font-size: 36px; font-weight: 700;">Cursos y Certificados</h3>
-            <dl style="margin-top: 50; padding: 0px;">
-              <a href="https://drive.google.com/file/d/1OrDjGlPqGBEKlg2Ce0gNpq8zuAy3L9h2/view?usp=sharing"
-                target="_blank">
-                <dd style="margin-top: 16px;"><i class="fa-solid fa-laptop-code"></i> Especialidad de aplicaciones con Flutter - códigofacilito - 2023</dd>
-              </a>
-              <a href="https://drive.google.com/file/d/1fm2Q6fuI-X1S7rdJNL5pscM0cosGSpIZ/view?usp=sharing"
-                target="_blank">
-                <dd style="margin-top: 16px;"><i class="fa-solid fa-laptop-code"></i> Curso profesional de JavaScript - códigofacilito - 2023</dd>
-              </a>
-              <a href="https://drive.google.com/file/d/11gqKZ58LI8FR8fAUKculf4R717m79EiI/view?usp=sharing"
-                target="_blank">
-                <dd style="margin-top: 16px;"><i class="fa-solid fa-laptop-code"></i> Curso profesional de JAVA - códigofacilito - 2023</dd>
-              </a>
-              <!-- Agrega aquí otros cursos o certificados relevantes que hayas completado -->
-            </dl>
-          </div>
+              <div style="margin-top: 70px;">
+                <h3 style="font-size: 36px; font-weight: 700;">Cursos y Certificados</h3>
+                <dl style="margin-top: 50; padding: 0px;">
+                  <a href="https://drive.google.com/file/d/1OrDjGlPqGBEKlg2Ce0gNpq8zuAy3L9h2/view?usp=sharing"
+                    target="_blank">
+                    <dd style="margin-top: 16px;"><i class="fa-solid fa-laptop-code"></i> Especialidad de aplicaciones
+                      con Flutter - códigofacilito - 2023</dd>
+                  </a>
+                  <a href="https://drive.google.com/file/d/1fm2Q6fuI-X1S7rdJNL5pscM0cosGSpIZ/view?usp=sharing"
+                    target="_blank">
+                    <dd style="margin-top: 16px;"><i class="fa-solid fa-laptop-code"></i> Curso profesional de
+                      JavaScript - códigofacilito - 2023</dd>
+                  </a>
+                  <a href="https://drive.google.com/file/d/11gqKZ58LI8FR8fAUKculf4R717m79EiI/view?usp=sharing"
+                    target="_blank">
+                    <dd style="margin-top: 16px;"><i class="fa-solid fa-laptop-code"></i> Curso profesional de JAVA -
+                      códigofacilito - 2023</dd>
+                  </a>
+                  <!-- Agrega aquí otros cursos o certificados relevantes que hayas completado -->
+                </dl>
+              </div>
 
-          <div style="margin-top: 70px;">
-            <h3 style="font-size: 36px; font-weight: 700;">Otros</h3>
-            <ul style="margin-top: 50; padding: 0px;">
-              <!-- Ejemplo de proyectos personales -->
-              <li style="margin-top: 16px;">Desarrollo de un Sistema de Ventas usando la libreria eel de Python</li>
+              <div style="margin-top: 70px;">
+                <h3 style="font-size: 36px; font-weight: 700;">Otros</h3>
+                <dl style="margin-top: 50; padding: 0px;">
+                  <!-- Ejemplo de proyectos personales -->
+                  <dd style="margin-top: 16px;">Desarrollo de un Sistema de Ventas usando la libreria eel de Python</dd>
 
-              <!-- Ejemplo de participación en eventos y competencias -->
-              <li style="margin-top: 16px;">Desafío de Aprendizaje Automático - [Microsoft] - 2023</li>
+                  <!-- Ejemplo de participación en eventos y competencias -->
+                  <a href="https://drive.google.com/file/d/1-xDH4FZzkCAVn4iwOWaOvqnqvTTfPY9H/view?usp=sharing" target="_blank">
+                    <img src="img/AI Skills Challenge - badge - ES-ES.png" alt="" width="400">
+                  </a>
 
-              <!-- Ejemplo de voluntariado o actividades extracurriculares -->
 
-              <!-- Ejemplo de habilidades adicionales -->
+                  <!-- Ejemplo de voluntariado o actividades extracurriculares -->
 
-            </ul>
-          </div>
+                  <!-- Ejemplo de habilidades adicionales -->
 
-          <!-- Redes sociales-->
-          <div style="margin-top: 70px;">
-            <h3 style="font-size: 36px; font-weight: 700;">Redes Sociales</h3>
-            <div style="text-align: center; margin-top: 16px;">
-              <a href="https://github.com/KevinGil12C" target="_blank" class="social-icon" style="margin-right: 10px;">
-                <img src="img/logotipo-de-github.png" alt="KevinGil12C" width="50">
-              </a>
-              <a href="https://www.facebook.com/kevinHeath120" target="_blank" class="social-icon"
-                style="margin-right: 10px;">
-                <img src="img/facebook.png" alt="Kevin kevinHeath120" width="50">
-              </a>
-              <a href="mailto:kebo.jcg77@gmail.com" target="_blank" class="social-icon" style="margin-right: 10px;">
-                <img src="img/gmail.png" alt="" width="50">
-              </a>
-            </div>
-          </div>
+                </dl>
+              </div>
+
+              <!-- Redes sociales-->
+              <div style="margin-top: 70px;">
+                <h3 style="font-size: 36px; font-weight: 700;">Redes Sociales</h3>
+                <div style="text-align: center; margin-top: 16px;">
+                  <a href="https://github.com/KevinGil12C" target="_blank" class="social-icon"
+                    style="margin-right: 10px;">
+                    <img src="img/logotipo-de-github.png" alt="KevinGil12C" width="50">
+                  </a>
+                  <a href="https://www.facebook.com/kevinHeath120" target="_blank" class="social-icon"
+                    style="margin-right: 10px;">
+                    <img src="img/facebook.png" alt="Kevin kevinHeath120" width="50">
+                  </a>
+                  <a href="mailto:kebo.jcg77@gmail.com" target="_blank" class="social-icon" style="margin-right: 10px;">
+                    <img src="img/gmail.png" alt="" width="50">
+                  </a>
+                </div>
+              </div>
 
       </section>
     </div>
